# intelligent_voice_api

./: .gitignore  README.md  main.py  pyproject.toml  server.py  session_id.txt
ai_pipeline/: brain_voice.py  controller.py  eardrum.py  vad_pipe.py
brain/: brain_voice.py
conversation/: controller.py
ears/: eardrum.py
utils/: audio_conversion.py
vad/: vad_pipe.py
